# chat-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/chat/network/: client_station.rs  pure_websocket_backup.rs
